- Fixed most of the date / time issues when submitting post

--- a/Waiter/views/admin/create.twig
+++ b/Waiter/views/admin/create.twig
@@ -329,35 +329,88 @@
     }
 
     var postDateElem,postStatusElem;
-    var setPostDateAndStatus = function(){
-        var postDate, postStatus;
+    var setPostDate = function(e){
+        var postDate,dateStr,localDate,gmtDate;
         var when = jQuery('#when').val();
         postDateElem = jQuery('#post_date');
-        postStatusElem = jQuery('#post_status');
         var dayInMsec = 86400000; // 24 * 60 * 60 * 1000 = 1 day in msec
         var futureDays = 1; // Default to adding one day, for 'tomorrow'
+        var offsetTZ = (new Date).getTimezoneOffset() * 60 * 1000; // adjustment as msec
 
         switch(when){
             case 'days':
                 futureDays = jQuery('#days').val();
                 // Fall-through to tomorrow code
             case 'tomorrow':
-                postStatusElem.val('future');
                 postDate = new Date(new Date().getTime() + (futureDays * dayInMsec));
-                postDateElem.val(postDate.toISOString().split('T')[0]);
+                dateStr = postDate.toISOString();
+                postDateElem.val(dateStr.substr(0,10)+' '+dateStr.substr(11,8));
                 break;
             case 'date':
-                postDateElem.val(jQuery('#datepicker').val());
-                postStatusElem.val('future'); // postDateElem already set
+                localDate = new Date(jQuery('#datepicker').val().substr(0,10)+'T'+jQuery('#timepicker').val().substr(0,5)+'Z');
+                gmtDate = new Date(localDate.getTime() + offsetTZ);
+                dateStr = gmtDate.toISOString();
+                postDateElem.val(dateStr.substr(0,10)+' '+dateStr.substr(11,8));
                 break;
             case '': // Now!
+                postDate = new Date();
+                dateStr = postDate.toISOString();
+                postDateElem.val(dateStr.substr(0,10)+' '+dateStr.substr(11,8));
+                break;
             default:
-                postDateElem.val('');
+                return false;
+        }
+        return true;
+    };
+    var preparePostDate = function (e){
+        var $this = jQuery(e)[0];
+        var offsetTZ = (new Date).getTimezoneOffset() * 60 * 1000; // adjustment as msec
+
+
+        if ('date' === $this.options[$this.selectedIndex].value){
+            var localDate = new Date(jQuery('#datepicker').val().substr(0,10)+'T'+jQuery('#timepicker').val().substr(0,5)+'Z');
+            var gmtDate = new Date(localDate.getTime() + offsetTZ);
+            var localNow = new Date((new Date()).getTime() - offsetTZ);
+            var gmtNow = new Date();
+            // if before Now reset datepicker/timepicker
+            if (gmtDate < gmtNow){
+                jQuery('#datepicker').val(localNow.toISOString().substr(0,10));
+                jQuery('#timepicker').val(localNow.toISOString().substr(11,5));
+            }
+        }
+        jQuery('.vs-field.hideable').addClass('hidden');
+        jQuery('[autofocus]').removeProp('autofocus');
+        jQuery('.vs-field.vs-'+$this.options[$this.selectedIndex].value).removeClass('hidden'); // e.g. unhide .vs-days input
+        jQuery('.vs-field.vs-'+$this.options[$this.selectedIndex].value+' INPUT').prop('autofocus',true).focus();
+    }
+    /* Fired on publish button
+     *
+     *
+     */
+    var setPublishedStatus = function(){
+        var when = jQuery('#when').val();
+        postStatusElem = jQuery('#post_status');
+
+        switch(when){
+            case 'days':
+            case 'tomorrow':
+            case 'date':
+                postStatusElem.val('future');
+                break;
+            case '': // Now
                 postStatusElem.val('publish');
                 break;
+            default:
+                alert ("Shouldn't be here");
+                return false;
         }
-
+        return true;
     };
+    var setDraftStatus = function(){
+        jQuery('#post_status').val('draft');
+        return true;
+    };
+
     var haveWarnedOfShortcodes = false;
     var doDraftValidation = function(e){
         var $recent_titles = jQuery('.recent_post_title');
@@ -383,7 +436,7 @@
         }
 
         if ( !haveWarnedOfShortcodes &&
-            jQuery('#post_content').val().search('[') !== -1){
+            jQuery('#post_content').val().indexOf("\[") !== -1){
             haveWarnedOfShortcodes = true;
             $notify
                 .addClass('error')
@@ -638,17 +691,11 @@
     #conceal_checkbox_inverse{
         display: none;
     }
-    .lefty {
-        float: left;
-    }
-    .righty {
-        float: right;
-    }
-    #when {
-        width: 100%;
-    }
 </style>
-{% embed 'admin/post-form.twig' %}{% block form_content %}
+    {%- set published = new_post.post_status in [ 'publish','future'] -%}
+    {%- set future = new_post.post_status == 'future' or published and "now"|date('Y-m-d H:i:s') < new_post.post_status('Y-m-d H:i:s') -%}
+
+    {% embed 'admin/post-form.twig' %}{% block form_content %}
     <input type="hidden" id="latitude" name="latitude" value="{{ new_post.latitude }}">
     <input type="hidden" id="longitude" name="longitude" value="{{ new_post.longitude }}">
     <input type="hidden" id="destination_id" name="destination_id" value="{{ new_post.destination_id }}">
@@ -699,23 +746,13 @@
                         { tinymce:
                             {
                                 setup: "function (editor) {
-                                    editor.on('change', function () {
+                                    editor.on('blur', function () {
                                         editor.save();
                                     });
                                 }"
                             }
                         }
                     ) }}
-                    <!--script>
-                        'tinymce'       => array(
-                            setup: function (editor) {
-                            editor.on('change', function () {
-                                editor.save();
-                            });
-                        }
-                        ),
-
-                    </script-->
                 </div>
             </div>
             {#- Layout the tags in a centered column (lg) or on its own (sm) -#}
@@ -789,72 +826,93 @@
                 <input type="number" title="Latitude" step="any" min="-85" max="85" placeholder="Latitude" name="latitude_entry" id="latitude_entry" value="{{ new_post.latitude_entry }}"/>
                 <input type="number" title="Longitude" step="any" min="-180" max="180"  placeholder="Longitude" name="longitude_entry" id="longitude_entry" value="{{ new_post.longitude_entry }}"/>
 
-                <h2><label for="when">Schedule</label></h2>
-                <div id="publish_error" class=""></div>
-                <a href="{{ fn('get_home_url') }}?p={{ new_post.ID }}&preview=true" target="_blank">
-                    <div class="soup-submit col-xs-6 lefty">
-                        <input type="button"
-                               name="preview"
-                               id="preview"
-                               class="button button-secondary button-large"
-                               value="preview">
+                <h2><label for="when">Actions</label></h2>
+                <div class="row">
+                    <div id="publish_error" class=""></div>
+                    <a href="{{ fn('get_home_url') }}?p={{ new_post.ID }}&preview=true" target="_blank">
+                        <div class="soup-submit col-sm-4 ">
+                            <button type="button"
+                                   name="preview"
+                                   id="preview"
+                                   class="button button-secondary button-large"
+                                    value="preview">{{ future or not published ? 'pre' }}view</button>
+                        </div>
+                    </a>
+
+                    <div class="soup-submit col-sm-4 ">
+                        <button type="submit"
+                                name="post_status"
+                                id="save-post"
+                                class="button button-secondary button-large"
+                                onclick="return setDraftStatus() && doDraftValidation(event) ;"
+                                value="draft">{{ published ? 'unpublish' : 'save draft' }}</button>
                     </div>
-                </a>
-                <div class="soup-submit col-xs-6 righty">
-                    <input type="button"
-                           name="conceal"
-                           id="conceal"
-                           class="button button-secondary button-large"
-                           onclick="jQuery('#confirm_conceal').toggleClass('hide')"
-                           value="conceal">
+
+                    <div class="soup-submit col-sm-4 ">
+                        <button type="button"
+                               name="conceal"
+                               id="conceal"
+                               class="button button-secondary button-large"
+                               onclick="jQuery('#confirm_conceal').toggleClass('hide')"
+                                value="conceal">conceal{{  new_post.conceal ?'ed' }}</button>
+                    </div>
                 </div>
-                <div id="confirm_conceal" class="{{ (new_post.conceal)?'':'hide' }} col-sm-12">
+                <div id="confirm_conceal" class="hide col-sm-12">
                     <label for="conceal_checkbox">Only check this if you don't want your post to go to Vacation Soup, or if it promotes your property in a way The Soup will not allow</label>
                     <input type="checkbox" name="conceal" id="conceal_checkbox" value="1"
-                           onchange="jQuery('#conceal_checkbox_inverse').prop('checked',!jQuery('#conceal_checkbox').prop('checked'))" {{ (new_post.conceal)?'checked':'notchecked' }}/>
+                           onchange="
+                           var concealed = jQuery('#conceal_checkbox').prop('checked');
+                           jQuery('#conceal_checkbox_inverse').prop('checked',!concealed);
+                           jQuery('#conceal').html(concealed ? 'concealed':'conceal') ;
+                            " {{ (new_post.conceal)?'checked':'notchecked' }}/>
                     <input type="checkbox" name="conceal" id="conceal_checkbox_inverse" value="0"/>
                 </div>
-                <div class="soup-submit">
-                    <input type="submit"
-                           name="post_status"
-                           id="save-post"
-                           class="button button-secondary button-large"
-                           onclick="return doDraftValidation(event);"
-                           value="draft">
-                </div>
-                <div class="soup-submit">
-                <input type="submit"
-                       name="post_status"
-                       id="publish"
-                       class="button button-primary button-large"
-                       onclick="return doPublishValidation(event);"
-                       value="publish"></div>
-                <div class="vs-field">
-                    <select id="when" onchange="
-                           setPostDateAndStatus();
-                           jQuery('.vs-field.hideable').addClass('hidden');
-                           jQuery('[autofocus]').removeProp('autofocus');
-                           jQuery('.vs-field.vs-'+this.options[this.selectedIndex].value).removeClass('hidden'); // e.g. unhide .vs-days input
-                           jQuery('.vs-field.vs-'+this.options[this.selectedIndex].value+' INPUT').prop('autofocus',true).focus();
-                        ">
-                        {% if (new_post.post_date|length > 0)  %}
-                        <option value="" selected>{{ new_post.date|length }}</option>
+                <h2>Publish</h2>
+
+                {% if published %}
+                    <div>
+                        {% if future %}
+                            Will publish {{ new_post.post_date_gmt|time_ago }} at {{ new_post.post_date|date("H:i") }}
                         {% else %}
-                        <option value="" selected>Now</option>
+                            Published {{ new_post.post_date_gmt|time_ago }} at {{ new_post.post_date|date('H:i') }}
                         {% endif %}
-                        <option value="tomorrow">Tomorrow</option>
-                        <option value="days">Wait a number of days</option>
-                        <option value="date">Select date</option>
-                    </select>
+                    </div>
+                {% endif %}
+                <div class="vs-field">
+                    {% if not published %}
+                        <select id="when" onchange="
+                               preparePostDate(this);
+                            ">
+                            {% if future %}
+                            <option value="date" selected>{{ new_post.post_date_gmt|time_ago }}</option>
+                            {% endif %}
+                            <option value="" {{ not future ? 'selected' }}>Now</option>
+                            <option value="tomorrow">Tomorrow</option>
+                            <option value="days">Wait a number of days</option>
+                            <option value="date">Select date</option>
+                        </select>
+                    {% endif %}
                 </div>
                 <div class="vs-field hideable hidden vs-days">
                     <label for="days">Wait</label>
-                    <input type="number" id="days" value="2" onchange="setPostDateAndStatus()"/> days before posting
+                    <input type="number" id="days" value="2" onchange="setPostDate()"/> days before posting
                 </div>
                 <div class="vs-field hideable hidden vs-date">
                     <label for="datepicker">Post this on: </label>
-                    <input type="text" class="datepicker" id="datepicker" onchange="setPostDateAndStatus()"/>
+                    <input type="text" class="datepicker" id="datepicker" value="{{ new_post.post_date|date('Y-m-d') }}" onchange="setPostDate()"/>
+                    <label for="timepicker">at: </label>
+                    <input type="text" class="" id="timepicker" value="{{ new_post.post_date|date('H:i') }}" onchange="setPostDate()"/>
                 </div>
+                <div class="soup-submit">
+                    <button type="submit"
+                            name="post_status"
+                            id="publish"
+                            class="button button-primary button-large {{ published ? 'hidden' }}"
+                            onclick="return doPublishValidation(event) && setPostDate() && setPublishedStatus();"
+                            value="publish">publish</button>
+
+                </div>
+
             </div>
         </div>
     </div>
