--- a/Waiter/views/admin/post-form.twig
+++ b/Waiter/views/admin/post-form.twig
@@ -5,6 +5,6 @@
     <input type="hidden" id="featured_image" name="featured_image" value="{{ new_post.featured_image }}">
     <input type="hidden" id="topic" name="topic" value="{{ new_post.topic }}">
     <input type="hidden" id="post_status" name="post_status" value="{{ new_post.post_status }}">
-    <input type="hidden" id="post_date" name="post_date" value="{{ new_post.post_date }}">
+    <input type="hidden" id="post_date" name="post_date_gmt" value="{{ new_post.post_date_gmt }}">
     <input type="hidden" id="post_type" name="post_type" value="{{ new_post.post_type }}">
 {% endblock form_header %}
