--- a/Waiter/views/debug.twig
+++ b/Waiter/views/debug.twig
@@ -1,13 +1,13 @@
-{% if new_post.post_date|length  %}
     {#
 {% include 'debug.twig' %}
     #}
-{#
+
 <pre>
-    {{ fn('print_r',new_post) }}
+    {{ fn('print_r',post,1) }}
 </pre>
-#}
+
+    {#
 <script>
     alert ( (new Date).getTimezoneOffset());
 </script>
-{% endif %}
+    #}
