--- a/Waiter/views/admin/create.twig
+++ b/Waiter/views/admin/create.twig
@@ -694,6 +694,9 @@
     .margin-top {
         margin-top: 15px;
     }
+    .row.actions {
+        overflow: scroll;
+    }
 </style>
     {%- set published = new_post.post_status in [ 'publish','future'] -%}
     {%- set future = new_post.post_status == 'future' or published and "now"|date('Y-m-d H:i:s') < new_post.post_status('Y-m-d H:i:s') -%}
@@ -830,7 +833,7 @@
                 <input type="number" title="Longitude" step="any" min="-180" max="180"  placeholder="Longitude" name="longitude_entry" id="longitude_entry" value="{{ new_post.longitude_entry }}"/>
 
                 <h2><label for="when">Actions</label></h2>
-                <div class="row">
+                <div class="row actions">
                     <div id="publish_error" class=""></div>
                     <a href="{{ fn('get_home_url') }}?p={{ new_post.ID }}&preview=true" target="_blank">
                         <div class="soup-submit col-sm-4 ">
