- Fixed  tab links for new menu structure

--- a/Waiter/views/admin/admin-tabs.twig
+++ b/Waiter/views/admin/admin-tabs.twig
@@ -1,13 +1,13 @@
 <div class="nav-tab-row  nav-tab-wrapper row">
     <div class="col-sm-8">
         <h2 class="">
-            <a href="?page=vacation-soup-admin&tab=create" class="nav-tab{{ (tab=='create') ? ' nav-tab-active' }}">Create</a>
+            <a href="?page=vacation-soup-admin-create" class="nav-tab{{ (tab=='create') ? ' nav-tab-active' }}">Create</a>
             {#<a href="?page=vacation-soup-admin&tab=dash" class="nav-tab{{ (tab=='dash') ? ' nav-tab-active' }}">Dashboard</a>#}
             {#<a href="?page=vacation-soup-admin&tab=list" class="nav-tab{{ (tab=='list') ? ' nav-tab-active' }}">Lists</a>#}
-            <a href="?page=vacation-soup-admin&tab=owner" class="nav-tab{{ (tab=='owner') ? ' nav-tab-active' }}">Owner</a>
-            <a href="?page=vacation-soup-admin&tab=property" class="nav-tab{{ (tab=='property') ? ' nav-tab-active' }}">Property</a>
-            <a href="?page=vacation-soup-admin&tab=connect" class="nav-tab{{ (tab=='connect') ? ' nav-tab-active' }}">Connect</a>
-            <a href="?page=vacation-soup-admin&tab=release" class="nav-tab{{ (tab=='release') ? ' nav-tab-active' }}">Release Note</a>
+            <a href="?page=vacation-soup-admin-owner" class="nav-tab{{ (tab=='owner') ? ' nav-tab-active' }}">Owner</a>
+            <a href="?page=vacation-soup-admin-property" class="nav-tab{{ (tab=='property') ? ' nav-tab-active' }}">Property</a>
+            <a href="?page=vacation-soup-admin-settings" class="nav-tab{{ (tab=='connect') ? ' nav-tab-active' }}">Connect</a>
+            <a href="?page=vacation-soup-admin-release" class="nav-tab{{ (tab=='release') ? ' nav-tab-active' }}">Release Note</a>
         </h2>
     </div>
     <div class="soup-logo col-sm-4">
