- fixed 'next' on owner

--- a/Waiter/views/admin/create.twig
+++ b/Waiter/views/admin/create.twig
@@ -591,7 +591,7 @@
             jQuery.post(ajaxurl,
                 args,
                 function(data) {
-                    window.location.href = "?page=vacation-soup-admin&tab=create";
+                    window.location.href = "?page=vacation-soup-admin-create";
                 },
                 'json' // I expect a JSON response
             );
