- fixed auth failure on connect tab - fixed auth-level permission error on connect menu/tab

--- a/Waiter/views/admin/admin-tabs.twig
+++ b/Waiter/views/admin/admin-tabs.twig
@@ -6,7 +6,9 @@
             {#<a href="?page=vacation-soup-admin&tab=list" class="nav-tab{{ (tab=='list') ? ' nav-tab-active' }}">Lists</a>#}
             <a href="?page=vacation-soup-admin-owner" class="nav-tab{{ (tab=='owner') ? ' nav-tab-active' }}">Owner</a>
             <a href="?page=vacation-soup-admin-property" class="nav-tab{{ (tab=='property') ? ' nav-tab-active' }}">Property</a>
+            {% if userType == 'administrator' or soup.multiuser %}
             <a href="?page=vacation-soup-admin-settings" class="nav-tab{{ (tab=='connect') ? ' nav-tab-active' }}">Connect</a>
+            {% endif %}
             <a href="?page=vacation-soup-admin-release" class="nav-tab{{ (tab=='release') ? ' nav-tab-active' }}">Release Note</a>
         </h2>
     </div>
