- Fixed title on release notes

--- a/Waiter/views/admin/admin-tabs.twig
+++ b/Waiter/views/admin/admin-tabs.twig
@@ -9,7 +9,7 @@
             {% if userType == 'administrator' or soup.multiuser %}
             <a href="?page=vacation-soup-admin-settings" class="nav-tab{{ (tab=='connect') ? ' nav-tab-active' }}">Connect</a>
             {% endif %}
-            <a href="?page=vacation-soup-admin-release" class="nav-tab{{ (tab=='release') ? ' nav-tab-active' }}">Release Note</a>
+            <a href="?page=vacation-soup-admin-release" class="nav-tab{{ (tab=='release') ? ' nav-tab-active' }}">Release Notes</a>
         </h2>
     </div>
     <div class="soup-logo col-sm-4">
