- improved url in preview

--- a/Waiter/views/admin/tease-post.twig
+++ b/Waiter/views/admin/tease-post.twig
@@ -27,7 +27,7 @@
                 {% endif %}
             </div>
             <div class="deface right">
-                <a href="{{ fn('get_home_url') }}?p={{ post.ID }}&preview=true" target="_blank" title="View locally [new tab]" id="preview_local">
+                <a href="{{ fn('get_home_url') }}/?p={{ post.ID }}&preview=true" target="_blank" title="View locally [new tab]" id="preview_local">
                     <i class="dismiss fa fa-eye"></i>
                 </a>
             </div>
